applications/convertx/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: convertx
  namespace: convertx

spec:
  selector:
    app: convertx
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
