applications/convertx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: convertx
  namespace: convertx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  ingressClassName: nginx
  rules:
    - host: convertx.prosto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convertx
                port:
                  number: 80
